--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # Session Data files
 .RData
-
+.DS_Store
 # Example code in package build process
 *-Ex.R
 
@@ -31,3 +31,4 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.Rproj.user
